# acts-framework

./: .gitlab-ci.yml
Algorithms/: CMakeLists.txt
Algorithms/Digitization/src/: HitSmearing.cpp
Algorithms/Finding/: CMakeLists.txt
Algorithms/Finding/include/ACTFW/Finding/: FindingAlgorithm.hpp
Algorithms/Finding/src/: FindingAlgorithm.cpp  FindingAlgorithmFinderFunction.cpp
Algorithms/Fitting/src/: FittingAlgorithm-p.cpp  FittingAlgorithm-s.cpp  FittingAlgorithm-serial.cpp  FittingAlgorithm.cpp
Algorithms/MaterialMapping/src/: GeantinoRecording.cpp
Algorithms/TrackFinding/: CMakeLists.txt
Algorithms/TrackFinding/include/ACTFW/TrackFinding/: TrackFindingAlgorithm.hpp
Algorithms/TrackFinding/src/: TrackFindingAlgorithm.cpp  TrackFindingAlgorithmTrackFinderFunction.cpp
Core/: CMakeLists.txt
Core/src/Framework/: CalibrationDecorator.cpp  Sequencer-serial.cpp  Sequencer.cpp
Core/src/Validation/: EffPlotTool.cpp  ResPlotTool.cpp
Detectors/GenericDetector/src/: GenericDetector.cpp
Examples/Common/: CMakeLists.txt
Examples/Common/src/: FatrasSimulationBase.cpp
Examples/Fatras/Common/: FatrasDigitizationBase.cpp  FatrasEvgenBase.cpp  FatrasSimulationBase.cpp
Examples/MaterialMapping/GeantinoRecording/: GeantinoRecordingExample.cpp
Examples/Reconstruction/: CMakeLists.txt  RecCKFTracks.cpp  RecTruthTracks.cpp
Io/Performance/: CMakeLists.txt
Plugins/Geant4/src/: MMEventAction.cpp  MMSteppingAction.cpp
Plugins/Root/src/: RootPropagationStepsWriter.cpp  RootTrajectoryWriter.cpp
scripts/: testReproducibility.sh  trackParResidual.C
(+25 files in other folders)
